refactorized for dependency management